fix: adding gap in `.footer`

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
 }
 
 @media screen and (max-width: 768px) {
